# IepTema1

./: CMakeLists.txt  README.md  Tema1.cpp
Tema3/: SingletonWithSmartPointers.cpp
